--- a/pages/hvac-and-lighting.html
+++ b/pages/hvac-and-lighting.html
@@ -18,6 +18,16 @@
         
     </head>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VW18XBHKBL"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-VW18XBHKBL');
+    </script>
+
     <body>
         <div class="body-bg">
             
