Fixed image links

--- a/hvac-and-lighting/difference-between-humidifiers-purifiers.html
+++ b/hvac-and-lighting/difference-between-humidifiers-purifiers.html
@@ -100,7 +100,7 @@
                         <div class="single-post-content">
                             <main class="single-post-container">
     <div class="single-post-featured-image"
-        style="min-height: 480px; background-image: url('http://localhost:8001/uploads/images/1uTZUfkUeurW4BhP5Tu2uAnrShtP2niV3nMfTP64.png')"
+        style="min-height: 480px; background-image: url('../../../uploads/images/1uTZUfkUeurW4BhP5Tu2uAnrShtP2niV3nMfTP64.png.html')"
         title="Difference between humidifiers and purifiers">
     </div>
     <div class="max-w-3xl mx-auto">
