Fixed image links

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="flex flex-wrap gap-16 justify-between">
                         
                         <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-32 bg-cover bg-center overflow-hidden w-full h-full"
-                         style="background-image: url('http://localhost:8001/uploads/images/1uTZUfkUeurW4BhP5Tu2uAnrShtP2niV3nMfTP64.png')">
+                         style="background-image: url('../../../uploads/images/1uTZUfkUeurW4BhP5Tu2uAnrShtP2niV3nMfTP64.png.html')">
                             <div class="max-w-xl sm:mx-auto lg:max-w-2xl text-center">
                                 <div class="flex flex-col gap-4 mb-16 sm:text-center sm:mb-0 text-white">
                                     <span class="text-shadow text-xs pb-4">Avery Grey</span>
