--- a/pages/hvac-and-lighting.html
+++ b/pages/hvac-and-lighting.html
@@ -54,7 +54,7 @@
         <div class="items-center justify-between w-full lg:flex w-full lg:order-1" id="mobile-menu-2" hidden>
             <ul class="flex bg-black flex-col gap-4 font-medium lg:flex-row lg:justify-between lg:gap-8 w-full text-center">
                 <div class="flex flex-col lg:flex-row">
-                                        <li class="menu-item"><a aria-label="HVAC and Lighting" title="HVAC and Lighting" href="../../pages/hvac-and-lighting.html">HVAC and Lighting</a></li>
+                                        <li class="menu-item"><a aria-label="HVAC & Lighting" title="HVAC & Lighting" href="../../pages/hvac-and-lighting.html">HVAC & Lighting</a></li>
                                     </div>
 
                 <div class="flex items-center flex-wrap gap-6 justify-start mx-auto lg:m-0">
