--- a/pages/settings.html
+++ b/pages/settings.html
@@ -32,6 +32,7 @@
         <select class="border border-gray-400 rounded-lg w-full" name="featured_post">
                         <option selected disabled>Select post</option>
             <option value="recent">Recent post</option>
+              <option value="3" >10 ways to make your home more energy efficient</option>
               <option value="2" >Difference between humidifiers and purifiers</option>
                     </select>
     </label>
