--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="flex-1 flex flex-col items-center justify-center">
               <h1 class="text-6xl lg:text-7xl xl:text-8xl text-gray-200 tracking-wider font-bold font-serif mt-12 text-center">Domain for sale</h1>
               <div class="flex flex-col items-center space-y-4 mt-24">
-                  <a href="http://wa.me/2349047490298">
+                  <a href="https://wa.me/2349047490298">
                     <span class="py-4 px-8 bg-blue-500 hover:bg-blue-700 transition duration-300 text-white font-bold rounded-lg uppercase text-sm">
                       Buy for $100
                     </span>
